modified:   multiclass/mMOT17_sbs_S50.yml

--- a/external/fast_reid/configs/multiclass/mMOT17_sbs_S50.yml
+++ b/external/fast_reid/configs/multiclass/mMOT17_sbs_S50.yml
@@ -12,6 +12,9 @@ DATALOADER:
   NUM_INSTANCE: 4
 
 SOLVER:
+  BASE_LR: 0.0001293425
+  WARMUP_ITERS: 0
+  WARMUP_FACTOR: 1.0
   IMS_PER_BATCH: 16
   AMP:
     ENABLED: False
